--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -88,7 +88,7 @@
 						div.tab-position {
 							height: $tabHeight;
 							margin-right: -3px;
-							width: 181px;
+							width: calc(var(--Width) + 1px);
 
 							div.tab {
 								$inactiveTabBg: #cbccce;
